# multiplayer-draw

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  UNDO-REDO.md
client/: globals.c  main.c  network.c  player.c  player.h  queue.c  queue.h
core/: artwork.h  dynamic_arr.h  network_utils.c  network_utils.h  object_pool.h  player_manager.h  stroke_manager.c  stroke_manager.h  types.h  uncommitted_strokes_queue.c  uncommitted_strokes_queue.h
server/: app.c  client_handle.c  handle_client.c  player.c  player.h  server_data.c  server_data.h  state.c
src/: main.c
